0.16

- More layout changes. When viewing a page, tags and incoming links are on the
  far right, rather than in their own column. Search has been moved to the top
  of the page.


0.15  2010-09-05

- The 0.13 and 0.14 releases were missing a prereq on Archive::Tar::Wrapper.


0.14  2010-09-05

- Added a hackaround for the fact that DBD::Pg doesn't handle UTF8 data
  entirely correctly (basically, a column with a user-defined type is never
  treated as UTF8, even if the type is text-based). See
  https://rt.cpan.org/Ticket/Display.html?id=40199 in the DBD::Pg queue for
  discussion.

- Fixed some bugs in the conversion of HTML tables to wikitext. This code
  isn't used by Silki itself (yet), but is used by SilkiX::Converter::Kwiki.

- Some style tweaks. In particular, the upper right global nav should no
  longer interfere with the tabs in the header.


0.13  2010-09-04

- Renamed a number of files in bin, and moved some of them to dev-bin.

- Added export and import features, along with silki-export and silki-import
  scripts. This feature is also available to site admins via the web UI.

- Searching for a word with leading or trailing space caused a SQL error.

- Moved some of the wiki subnav items to the dashboard (all attachments,
  orphans, & wanted pages), since they're not all that important.

- The display of pages recently edited in their profile was broken.

- Added a revision purge feature available to wiki admins. This destroys a
  revision completely, renumbering any subsequent revisions. This is useful
  for removing spam and other bogus changes.


0.12  2010-07-22

- The mason cache directory will be deleted when Silki is installed, to ensure
  that templates are re-read.

- Several pages that linked to users did not show the user's image. Now all
  links to a user should include the user's image.

- Small improvement to diff display.

- When a search didn't find any results, the search page did not make this
  clear.


0.11  2010-07-22
