@@ -4,6 +4,9 @@
   far right, rather than in their own column. Search has been moved to the top
   of the page.
 
+- The list of active users on the wiki dashboard was not ordered by most
+  recent edits.
+
 
 0.15  2010-09-05
 
